python-k8s/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-fast-api
spec:
  selector:
    app: k8s-fast-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
